# face_recognition

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
API/: Dockerfile  requirements.txt  server.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: X_embeddings.pkl  conect.py  credentials.json  label_encoder.pkl  svm_model.pkl  y_labels.pkl
src/: app.py  credentials.json  style.py
streamlit/: api_utils.py  app.py  attendance_utils.py  server.py  style.py
