[build-system]
requires = ["flit_core >=3.2,<4", "setuptools", "wheel"]
build-backend = "setuptools.build_meta" 


[project]
name = "1"
version = "0.0.1"
description = "Face recognition app for assistance list"
authors = [
  { name = "Equipo mamado" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["1"]
force_sort_within_sections = true
